--- a/software/src/omaha/templates/bower.json
+++ b/software/src/omaha/templates/bower.json
@@ -23,6 +23,8 @@
     "paper-menu": "PolymerElements/paper-menu#~1.1.1",
     "paper-item": "PolymerElements/paper-item#~1.0.3",
     "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#~1.0.4",
-    "paper-tooltip": "PolymerElements/paper-tooltip#~1.1.1"
+    "paper-tooltip": "PolymerElements/paper-tooltip#~1.1.1",
+    "paper-badge": "PolymerElements/paper-badge#~1.0.4",
+    "iron-fit-behavior": "PolymerElements/iron-fit-behavior#~1.0.4"
   }
 }
