--- a/software/src/omaha/templates/bower.json
+++ b/software/src/omaha/templates/bower.json
@@ -25,6 +25,7 @@
     "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#~1.0.4",
     "paper-tooltip": "PolymerElements/paper-tooltip#~1.1.1",
     "iron-fit-behavior": "PolymerElements/iron-fit-behavior#~1.0.4",
-    "paper-dialog": "PolymerElements/paper-dialog#~1.0.2"
+    "paper-dialog": "PolymerElements/paper-dialog#~1.0.2",
+    "paper-progress": "PolymerElements/paper-progress#~1.0.7"
   }
 }
