--- a/software/src/omaha/templates/bower.json
+++ b/software/src/omaha/templates/bower.json
@@ -26,6 +26,7 @@
     "paper-tooltip": "PolymerElements/paper-tooltip#~1.1.1",
     "iron-fit-behavior": "PolymerElements/iron-fit-behavior#~1.0.4",
     "paper-dialog": "PolymerElements/paper-dialog#~1.0.2",
-    "paper-progress": "PolymerElements/paper-progress#~1.0.7"
+    "paper-progress": "PolymerElements/paper-progress#~1.0.7",
+    "paper-drawer-panel": "PolymerElements/paper-drawer-panel#~1.0.4"
   }
 }
