Started working on a way to assign speakers to zones

--- a/software/src/omaha/templates/bower.json
+++ b/software/src/omaha/templates/bower.json
@@ -27,6 +27,7 @@
     "iron-fit-behavior": "PolymerElements/iron-fit-behavior#~1.0.4",
     "paper-dialog": "PolymerElements/paper-dialog#~1.0.2",
     "paper-progress": "PolymerElements/paper-progress#~1.0.7",
-    "paper-drawer-panel": "PolymerElements/paper-drawer-panel#~1.0.4"
+    "paper-drawer-panel": "PolymerElements/paper-drawer-panel#~1.0.4",
+    "paper-listbox": "polymerelements/paper-listbox#~1.0.0"
   }
 }
